      - Verifying repository signatures: treat unaccessible detached
        signatures as missing (results in better diagnostics).
      - Removed the 'copy the keyring' hack, introduced in 2.2.2.
      - Removed support of localized descriptions without a description hash
        present in the original index (even oldstable has them).
    - cache:
      - 'getSatisfyingVersions': provisional single-arch support for ':native'
        suffixes.
    - cache/binaryversion:
      - [ABI break] New member 'important'.
    - cache/sourceversion:
      - [ABI break] New member 'buildProfiles'.
      - [ABI break] 'RelationTypes': new values 'BuildDependsArch' and
        'BuildConflictsArch'.
    - system/worker:
      - 'updateReleaseAndIndexData': fixed removing partial uncompressed file
        if uncompressing of a temporary file failed.
      - 'updateReleaseAndIndexData': use new '*-Download' sections in
        diff indexes to check size and hash sums of individual diff earlier.
      - 'updateReleaseAndIndexData': dropped the obsolete way of downloading
        translation files via localication index (even oldstable has them in
        Release files).
      - 'changeSystem': do not require anymore that 'dpkg' binary package is
        installed, it's enough that dpkg binary is available.
  * doc:
    - reference:
      - Fixed Doxygen warnings about obsolete Doxyfile tags.
  * debian:
    - control:
      - Bumped the ABI suffix from 1 to 2.
      - Added build-dependency on locales-all (for locale-specific tests).
      - Added build-dependency on liblist-moreutils-perl (for tests).
      - Added build-dependency on libtest-dir-perl (for tests).
      - Added build-dependency on libexpect-simple-perl (for shell tests).
      - Added build-dependency on gpgv, gnupg, ed (for tests).

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Wed, 28 Sep 2016 13:10:13 +0200

cupt (2.9.10) unstable; urgency=medium

  * lib: