@@ -58,7 +58,8 @@ cupt (2.10.0~) UNRELEASED; urgency=low
       - Removed the 'copy the keyring' hack, introduced in 2.2.2.
       - Removed support of localized descriptions without a description hash
         present in the original index (even oldstable has them).
-    - cache:
+      - Parsing release files: fixed displaying 'no release file present'
+        warnings if more than one release file is missing.
       - 'getSatisfyingVersions': provisional single-arch support for ':native'
         suffixes.
     - cache/binaryversion:
